			 registering all Controller classes.
			+SimpleInjector.Extensions.LifetimeScoping (.NET 4.0)
			 Adds extension methods for Lifetime Scope lifestyle. This functionality can not be placed in 
			 SimpleInjector.Extensions, because it has a dependency on .NET 4.0 (makes use of ThreadLocal<T>), 
			 while SimpleInjector.Extensions must stay compatible with .NET 3.5 (for now).

	Code Changes:
		-[Extensions] New DecoratorExtensions class added. This class replaces GenericDecoratorExtensions
		 and allows registering both generic and non-generic decorators and enables decorating collections
		 that are returned using GetAllInstances or are injected using IEnumerable<T> constructor arguments.

	Bug fixes:
		-[Extensions] RegisterManyForOpenGeneric extension method threw an exception which message contained
		 the .NET type instead of the 'friendly' type name, as the rest of the Simple Injector uses.
		-[Core] DebuggerDisplay for InstanceProducers did not work when running the VB debugger.


Version 1.4.1.12065 (v1.4.1 RTM) 2012-03-05
	General description:
		RegisterOpenGenericDecorator extension methods improved to allow registering non-generic decorator.

	Code Changes:
		-[Extensions] GetTypesToRegister methods added to the OpenGenericBatchRegistrationExtensions class
		 which allows to customize the behavior.
		-[Extensions] RegisterOpenGenericDecorator extension methods now allow registering non-generic
		 implementations, as long as they implement the supplied open generic service type.

	Bug fixes:
		-None.


Version 1.4.0.12049 (v1.4.0 RTM) 2012-02-18
	General description:
		Container.GetInitializer<T> method added to the core library, and RegisterManyForOpenGeneric in
		extensions now execute initalizers on decorators.

	Code Changes:
		-[Core] The internal Container.GetInitializerFor<T> method has been made public and renamed to
		 GetInitializer<T>. This enables certain specialized scenarios. The main (external) consumer of