@@ -1,0 +1,22 @@
+<?xml version="1.0"?>
+<package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
+  <metadata>
+    <version>{version}</version>
+    <authors>S. van Deursen</authors>
+    <owners>S. van Deursen</owners>
+    <licenseUrl>http://simpleinjector.codeplex.com/license</licenseUrl>
+    <projectUrl>http://simpleinjector.codeplex.com</projectUrl>
+    <iconUrl>http://simpleinjector.cuttingedge.it/SimpleInjector.ico</iconUrl>
+    <dependencies>
+      <dependency id="SimpleInjector" version="{versionCore}" />
+    </dependencies>
+    <id>SimpleInjector.Packaging</id>
+    <title>Simple Injector Packaging</title>
+    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <description>Adds support for packaging sets of related services to allow registering them together.</description>
+    <summary>Adds support for packaging sets of related services to allow registering them together.</summary>
+    <copyright>S. van Deursen 2012</copyright>
+    <language>en-US</language>
+    <tags>simpleinjector architecture dependency-injection DI easy easy-to-use Inversion-of-Control IOC Servicelocator packaging packages modules installers registries</tags>
+  </metadata>
+</package>
