@@ -1,0 +1,1 @@
+﻿<?xml version="1.0" encoding="utf-8"?><Relationships xmlns="http://schemas.openxmlformats.org/package/2006/relationships"><Relationship Type="http://schemas.microsoft.com/packaging/2010/07/manifest" Target="/SimpleInjector.Packaging.nuspec" Id="Rd2c77833c6964a1b" /><Relationship Type="http://schemas.openxmlformats.org/package/2006/relationships/metadata/core-properties" Target="/package/services/metadata/core-properties/4d447eef3ba54c2da48c4d25f475fcbe.psmdcp" Id="Rdf4cd213e9a24eab" /></Relationships>
