@@ -1,0 +1,8 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
+<coreProperties xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:dcterms="http://purl.org/dc/terms/" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://schemas.openxmlformats.org/package/2006/metadata/core-properties">
+<dc:creator>S. van Deursen</dc:creator>
+<dc:description>Adds support for packaging sets of related services to allow registering them together.</dc:description>
+<dc:identifier>SimpleInjector.Packaging</dc:identifier>
+<version>{version}</version>
+<keywords>simpleinjector architecture dependency-injection DI easy easy-to-use Inversion-of-Control IOC Servicelocator packaging packages modules installers registries</keywords>
+</coreProperties>
